# zash

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: rust.yml
ISSUE_TEMPLATE/: bug_report.md
src/: config.rs  main.rs  opts.rs  parser.rs  scripting.rs  shell.rs  utils.rs
src/builtins/: cd.rs  echo.rs  exit.rs  mod.rs
src/parser/: lexer.rs  mod.rs  parser.rs  tokens.rs
src/parsers/: errors.rs  lexer.rs  mod.rs  parser.rs  tokens.rs
