[package]
name = "zash"
description = "Zash - A Zuper Awesome Shell"
license = "GPL-3.0"
edition = "2018"
repository="https://github.com/robiot/zash"
version = "0.1.1"

[dependencies]
dirs = "4.0.0"
rustyline = "9.0.0"
rustyline-derive = "0.5.0"
signal-hook = "0.3.10"
structopt = "0.3.25"
whoami = "1.1.5"
colored = "2.0.0"
