[package]
authors = ["robiot"]
description = "Zash - A Zuper Awesome Shell"
edition = "2018"
license = "GPL-3.0"
name = "zash"
repository = "https://github.com/robiot/zash"
version = "0.2.0"

[dependencies]
colored = "2.0.0"
dirs = "4.0.0"
rustyline = {git = "https://github.com/robiot/rustyline"}
rustyline-derive = "0.5.0"
signal-hook = "0.3.10"
structopt = "0.3.25"
# toml = "0.5.8"
whoami = "1.1.5"
glob = "0.3.0"
regex = "1.5.4"